--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -27,12 +27,12 @@
 </div>
 
 <!-- LINKS -->
-{% if Entity.entityData.links %}
+{% if Entity.entityData.links.items %}
   <div class='box'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='linkedItemsIcon' class='d-inline'><i id='linkedItemsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-paperclip'></i> {{ 'Linked items'|trans }}</h3>
     <div class='row mt-2' id='linkedItemsDiv' data-save-hidden='linkedItemsDiv'>
       <ul class='list-group ml-3'>
-        {% for link in Entity.entityData.links %}
+        {% for link in Entity.entityData.links.items %}
           {% set randomId = random() %}
           <li class='list-group-item' id='parent_{{ randomId }}'>
             <i class='fas fa-link mr-1'></i>
@@ -53,8 +53,33 @@
   </div>
 {% endif %}
 
+{% if Entity.entityData.links.experiments %}
+  <div class='box'>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='linkedExperimentsIcon'><i id='linkedExperimentsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-paperclip'></i> {{ 'Linked experiments'|trans }}</h3>
+    <div class='row mt-2' id='linkedExperimentsDiv' data-save-hidden='linkedExperimentsDiv'>
+      <ul class='list-group ml-3'>
+        {% for link in Entity.entityData.links.experiments %}
+          {% set randomId = random() %}
+          <li class='list-group-item' id='parent_{{ randomId }}'>
+            <i class='fas fa-link mr-1'></i>
+            <!-- toggle body -->
+            <span data-type='experiments' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
+              <i class='fas fa-plus-circle'></i>
+            </span>
+            <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='experiments.php?mode=view&id={{ link.itemid }}'>
+                {{ link.title|raw }}</a>
+            <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
+            <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
+            <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+{% endif %}
+
 <!-- RELATED ITEMS/EXPERIMENTS -->
-{% if Entity.type == 'items' %}
+{% if Entity.type == 'items' or Entity.type == 'experiments' %}
   {% if relatedItemsArr %}
     <div class='box'>
       <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='relatedItemsIcon' class='d-inline'><i id='relatedItemsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-paperclip'></i> {{ 'Related items'|trans }}</h3>
