change gitter icon in footer to use same as new menu

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -12,7 +12,7 @@
 
     <a class='elab-tooltip-top' style='color:#343434' href='https://gitter.im/elabftw/elabftw'>
       <span>{{ 'Join the discussion on Gitter'|trans }}</span>
-        <i title='Gitter' class='fab fa-gitter fa-lg'></i>
+        <i title='Gitter' class='fas fa-comment-dots fa-lg'></i>
     </a>
 
     <a class='elab-tooltip-top' style='color:#343434' href='https://github.com/elabftw/elabftw/issues/new/choose'>
