--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -60,5 +60,23 @@
     {% endif %}
 </section>
 
+<section class='box'>
+  <h3>{{ 'Export all your experiments'|trans }}</h3>
+    <input hidden id='userExport' value='{{ App.Users.userData.userid }}'>
+    <label for='userExportFormat'>{{ 'Select export format:'|trans }}</label>
+    <select class='form-control col-md-4' id='userExportFormat' autocomplete='off'>
+      <option value='eln'>{{ 'Make an ELN'|trans }}</option>
+      <option value='zip'>{{ 'Make Zip'|trans }}</option>
+      <option value='csv'>{{ 'Make Csv'|trans }}</option>
+      <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
+      <option value='qrPdf'>{{ 'Make QR codes PDF'|trans }}</option>
+      <option value='json'>{{ 'Make JSON'|trans }}</option>
+    </select>
+    <div class='mt-2'>
+      <button data-action='export-user' class='button btn btn-primary'>{{ 'Export'|trans }}</button>
+    </div>
+
+</section>
+
 <div id='info' data-page='profile'></div>
 {% endblock body %}
