looking at revisions requires read access, not write access
see #2304

--- a/src/templates/revisions.html
+++ b/src/templates/revisions.html
@@ -11,7 +11,7 @@
 </a>
 {% for revision in revisionsArr %}
   <div class='box'>
-    <span class='relative-moment' title='{{ revision.savedate }}'></span> {{ 'by'|trans }} {{ revision.fullname|raw }} {% if not Entity.entityData.locked %}<a href='app/controllers/RevisionsController.php?item_id={{ Entity.id }}&type={{ Entity.type }}&action=restore&rev_id={{ revision.id }}'>{{ 'Restore'|trans }}</a>{% endif %}<br>
+    <span class='relative-moment' title='{{ revision.savedate }}'></span> {{ 'by'|trans }} {{ revision.fullname|raw }} {% if not Entity.isReadOnly %}<a href='app/controllers/RevisionsController.php?item_id={{ Entity.id }}&type={{ Entity.type }}&action=restore&rev_id={{ revision.id }}'>{{ 'Restore'|trans }}</a>{% endif %}<br>
     {% set body = revision.body %}
     {% if revision.content_type == constant('Elabftw\\Models\\AbstractEntity::CONTENT_MD') %}
       {% set body = revision.body|md2html %}
