--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -55,9 +55,11 @@
                     {% endif %}
 
                     <!-- Edit filename -->
-                    <a class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
-                      data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}' title='{{ 'Edit filename'|trans }}'>
-                      <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}</a>
+                    {% if not upload.immutable %}
+                      <a class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
+                        data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}' title='{{ 'Edit filename'|trans }}'>
+                        <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}</a>
+                    {% endif %}
 
 
                     <!-- Annotate image -->
@@ -66,15 +68,17 @@
                         <i class='fas fa-fw fa-paint-brush mr-1'></i>{{ 'Annotate this image'|trans }}</a>
                     {% endif %}
 
-                    <!-- Save mol file as image -->
+                    <!-- Save mol file as png -->
                     {% if ext matches '/(mol)$/i' %}
-                      <a class='dropdown-item saveAsImage clickable' data-canvasid='molFile_{{ upload.id }}' data-name='{{ upload.real_name }}'>
+                      <a class='dropdown-item clickable' data-action='save-mol-as-png' data-canvasid='molFile_{{ upload.id }}' data-name='{{ upload.real_name }}'>
                       <i class='fas fa-fw fa-image mr-1'></i>{{ 'Save as image'|trans }}</a>
                     {% endif %}
 
                     <!-- Upload a new version -->
-                    <a class='dropdown-item' data-action='replace-upload' data-uploadid='{{ upload.id }}'>
-                      <i class='fas fa-fw fa-sync-alt mr-1'></i>{{ 'Upload a new version of this file'|trans }}</a>
+                    {% if not upload.immutable %}
+                      <a class='dropdown-item' data-action='replace-upload' data-uploadid='{{ upload.id }}'>
+                        <i class='fas fa-fw fa-sync-alt mr-1'></i>{{ 'Upload a new version of this file'|trans }}</a>
+                    {% endif %}
 
                   {% endif %}
 
@@ -88,7 +92,7 @@
                     <a class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
                       <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}</a>
 
-                  {% if mode == 'edit' %}
+                  {% if mode == 'edit' and not upload.immutable %}
                     <!-- DESTROY -->
                     <div class='dropdown-divider'></div>
                     <a class='dropdown-item hover-danger' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
@@ -202,7 +206,7 @@
 
         {% if mode == 'edit' or upload.comment != 'Click to add a comment' %}
           <i class='fas fa-fw fa-comments mr-1'></i>
-          <p class='file-comment editable hl-hover d-inline'
+          <p class='file-comment {% if not upload.immutable %}editable hl-hover {% endif %}d-inline'
             data-type='{{ upload.type }}'
             data-itemid='{{ upload.item_id }}'
             data-id='{{ upload.id }}'>{{ upload.comment|raw }}</p><br>
