--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -110,7 +110,7 @@
                        {% if upload.real_name matches '/(jpg|jpeg|png|gif)$/i' %}
                            data-fancybox='group'
                        {% endif %}
-                       {% if upload.comment != 'Click to add a comment' %}
+                       {% if upload.comment %}
                            title='{{ upload.comment }}' data-caption='{{ upload.comment }}'
                        {% endif %}
                        >
@@ -202,15 +202,13 @@
             </span>
           </p>
         <br>
-        {# if we are in view mode, we don't show the comment if it's the default text. This is to avoid showing 'Click to add a comment' where in fact you can't click to add a comment because you are in view mode #}
-
-        {% if mode == 'edit' or upload.comment != 'Click to add a comment' %}
           <i class='fas fa-fw fa-comments mr-1'></i>
           <p class='file-comment {% if not upload.immutable %}editable hl-hover {% endif %}d-inline'
             data-type='{{ upload.type }}'
             data-itemid='{{ upload.item_id }}'
-            data-id='{{ upload.id }}'>{{ upload.comment|raw }}</p><br>
-        {% endif %}
+            data-isempty='{{ upload.comment is null ? '1' : '0' }}'
+            data-id='{{ upload.id }}'>{% if upload.comment is null %}{{ 'Click to add a comment'|trans }}{% else %}{{ upload.comment|raw }}{% endif %}
+          </p>
 
         {% if ext matches '/(json)$/i' %}
           <div class='clickable'>
