wip: get started with apiv2
also rework DisplayParams class

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -248,18 +248,16 @@
 </section>
 
 <!-- CHEM EDITOR -->
-{% if Entity.Users.userData.chem_editor %}
-  <div class='box chemdoodle'>
-    <h3 data-action='toggle-next' data-icon='chemDivIcon' class='d-inline'><i id='chemDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-dna'></i> {{ 'Molecule drawer'|trans }}</h3>
-    <div class='text-center'>
+<div class='box chemdoodle'>
+  <h3 data-action='toggle-next' data-icon='chemDivIcon' class='d-inline'><i id='chemDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-dna'></i> {{ 'Molecule drawer'|trans }}</h3>
+  <div id='chemDiv' hidden data-save-hidden='chemDiv' class='mt-2 text-center'>
+    <div class='text-center mb-2'>
       <button class='btn btn-primary' data-filetype='chemjson' data-action='save-chem-as-file'>{{ 'Save as JSON'|trans }}</button>
       <button class='btn btn-primary' data-filetype='png' data-action='save-chem-as-file'>{{ 'Save as image'|trans }}</button>
     </div>
-    <div id='chemDiv' hidden data-save-hidden='chemDiv' class='mt-2 text-center'>
-      <canvas id='sketcher'></canvas>
-    </div>
+    <canvas id='sketcher'></canvas>
   </div>
-{% endif %}
+</div>
 
 <div id='info'
     data-page='edit'
