--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -37,6 +37,8 @@
   <script defer src='assets/main.bundle.js?v={{ v }}'></script>
   <!-- rest of js libs -->
   <script defer src='assets/jslibs.bundle.js?v={{ v }}'></script>
+  <!-- chemdoodle -->
+  <script defer src='assets/chemdoodle.min.js?v={{ v }}'></script>
 
 </head>
 
