now user can be completely patched
get rid of UserPreferences class \o/

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -237,7 +237,7 @@
     </section>
 
     <div class='text-center mt-3'>
-        <button type='submit' name='Submit' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+        <button type='submit' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
 
   </form>
