--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -176,7 +176,7 @@
 </div>
 
 <div id='info'
-    data-calendarlang="{{ calendarLang }}"
+    data-calendarlang="{{ App.getJsLang }}"
     data-item="{{ selectedItem }}"
     data-all="{{ allItems }}"></div>
 {% endblock body %}
