--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -53,6 +53,7 @@
 
 <!-- TAB 1 - USER PREFERENCES -->
 <div data-tabcontent='1' hidden>
+  <!-- The checkbox inputs are duplicated with a 0 value hidden input above because otherwise it is not sent to the controller -->
   <form class='form-group' action='app/controllers/UcpController.php' method='post'>
     {{ App.Session.get('csrf')|csrf }}
     <!-- LANGUAGE -->
@@ -106,15 +107,17 @@
       </select>
 
       <div>
+      <input type='hidden' value='' name='single_column_layout'/>
       <input id='layout' class='mt-2' type='checkbox' name='single_column_layout'
-          {{ App.Users.userData.single_column_layout == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.single_column_layout == 1 ? " checked='checked'" }}
       />
       <label for='layout'>{{ 'Use single column layout'|trans }}</label>
       </div>
 
       <div>
+      <input type='hidden' value='' name='uploads_layout'/>
       <input id='uploads_layout' class='mt-2' type='checkbox' name='uploads_layout'
-          {{ App.Users.userData.uploads_layout == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.uploads_layout == 1 ? " checked='checked'" }}
       />
       <label for='uploads_layout'>{{ 'Display attached files with thumbnails'|trans }}</label>
       </div>
@@ -158,30 +161,35 @@
         </select>
         <br>
 
+        <input type='hidden' value='' name='cjk_fonts'/>
         <input id='cjk_fonts' type='checkbox' name='cjk_fonts'
-          {{ App.Users.userData.cjk_fonts == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.cjk_fonts == 1 ? " checked='checked'" }}
         />
         <label for='cjk_fonts'>{{ 'Enable Chinese, Japanese and Korean fonts in PDF generation (WARNING: this will dramatically increase the file size unless you disable PDF/A)'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='pdfa'/>
         <input id='pdfa' type='checkbox' name='pdfa'
-          {{ App.Users.userData.pdfa == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.pdfa == 1 ? " checked='checked'" }}
         />
         <label for='pdfa'>{{ 'Generate PDF/A compliant pdfs (will embed the fonts and make the file bigger)'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='inc_files_pdf'/>
         <input id='inc_files_pdf' type='checkbox' name='inc_files_pdf'
-          {{ App.Users.userData.inc_files_pdf == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.inc_files_pdf == 1 ? " checked='checked'" }}
         />
         <label for='inc_files_pdf'>{{ 'Add attached files summary to the pdf'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='append_pdfs'/>
         <input id='append_pdfs' type='checkbox' name='append_pdfs'
-          {{ App.Users.userData.append_pdfs == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.append_pdfs == 1 ? " checked='checked'" }}
         />
         <label for='append_pdfs'>{{ 'Append attached PDFs to exported pdf'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='pdf_sig'/>
         <input id='pdf_sig' type='checkbox' name='pdf_sig'
-          {{ App.Request.cookies.get('pdf_sig') == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.pdf_sig == 1 ? " checked='checked'" }}
         />
-        <label for='pdf_sig'>{{ 'Enable french style signature block in pdf export (setting is only set for this browser)'|trans }}</label>
+        <label for='pdf_sig'>{{ 'Enable french style signature block in pdf export'|trans }}</label>
 
         </p>
     </section>
@@ -191,28 +199,33 @@
     <section class='box'>
         <h3>{{ 'Miscellaneous'|trans }}</h3>
         <p>
+        <input type='hidden' value='0' name='show_team'/>
         <input id='show_team' type='checkbox' name='show_team'
-          {{ App.Users.userData.show_team == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.show_team == 1 ? " checked='checked'" }}
         />
         <label for='show_team'>{{ 'Show experiments from the team on the Experiments page'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='show_team_templates'/>
         <input id='show_team_templates' type='checkbox' name='show_team_templates'
-               {{ App.Users.userData.show_team_templates == '1' ? " checked='checked'" }}
+               {{ App.Users.userData.show_team_templates == 1 ? " checked='checked'" }}
         />
         <label for='show_team_templates'>{{ 'Show templates from the team on the Templates page and in the menus'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='show_public'/>
         <input id='show_public' type='checkbox' name='show_public'
-               {{ App.Users.userData.show_public == '1' ? " checked='checked'" }}
+               {{ App.Users.userData.show_public == 1 ? " checked='checked'" }}
         />
         <label for='show_public'>{{ 'Show experiments/database items from outside the team'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='use_markdown'/>
         <input id='use_markdown' type='checkbox' name='use_markdown'
-          {{ App.Users.userData.use_markdown == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.use_markdown == 1 ? " checked='checked'" }}
         />
         <label for='use_markdown'>{{ 'Disable the rich text editor and write Markdown directly'|trans }}</label>
         <br>
+        <input type='hidden' value='0' name='use_isodate'/>
         <input id='use_isodate' type='checkbox' name='use_isodate'
-          {{ App.Users.userData.use_isodate == '1' ? " checked='checked'" }}
+          {{ App.Users.userData.use_isodate == 1 ? " checked='checked'" }}
         />
         <label for='use_isodate'>{{ 'Use ISO datetime in the text editor instead of localized one'|trans }}</label>
         </p>
@@ -374,10 +387,10 @@
       <tr>
         <td>{{ notif.designation }}</td>
         <td>
-          <input type='checkbox' data-trigger='change' data-model='user' data-target='{{ notif.setting }}' {{ App.Users.userData[notif.setting] == '1' ? " checked='checked'" }} />
+          <input type='checkbox' data-trigger='change' data-model='user' data-target='{{ notif.setting }}' {{ App.Users.userData[notif.setting] == 1 ? " checked='checked'" }} />
         </td>
         <td>
-          <input type='checkbox' data-trigger='change' data-model='user' data-target='{{ notif.setting }}_email' {{ App.Users.userData[notif.setting ~ '_email'] == '1' ? " checked='checked'" }}/>
+          <input type='checkbox' data-trigger='change' data-model='user' data-target='{{ notif.setting }}_email' {{ App.Users.userData[notif.setting ~ '_email'] == 1 ? " checked='checked'" }}/>
         </td>
       </tr>
     {% endfor %}
