add qrpdf to list of exportable formats

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -68,8 +68,8 @@
       <option value='eln'>{{ 'Make an ELN'|trans }}</option>
       <option value='zip'>{{ 'Make Zip'|trans }}</option>
       <option value='csv'>{{ 'Make Csv'|trans }}</option>
-      <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
-      <option value='qrPdf'>{{ 'Make QR codes PDF'|trans }}</option>
+      <option value='multipdf'>{{ 'Make PDF'|trans }}</option>
+      <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
       <option value='json'>{{ 'Make JSON'|trans }}</option>
     </select>
     <div class='mt-2'>
