--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -343,8 +343,8 @@
       <option value='eln'>{{ 'Make an ELN'|trans }}</option>
       <option value='zip'>{{ 'Make a ZIP'|trans }}</option>
       <option value='csv'>{{ 'Make a CSV'|trans }}</option>
-      <option value='multiPdf'>{{ 'Make a PDF'|trans }}</option>
-      <option value='qrPdf'>{{ 'Make QR codes PDF'|trans }}</option>
+      <option value='multipdf'>{{ 'Make a PDF'|trans }}</option>
+      <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
       <option value='json'>{{ 'Make JSON'|trans }}</option>
     </select>
 
@@ -366,8 +366,8 @@
       <option value='eln'>{{ 'Make an ELN'|trans }}</option>
       <option value='zip'>{{ 'Make Zip'|trans }}</option>
       <option value='csv'>{{ 'Make Csv'|trans }}</option>
-      <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
-      <option value='qrPdf'>{{ 'Make QR codes PDF'|trans }}</option>
+      <option value='multipdf'>{{ 'Make PDF'|trans }}</option>
+      <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
       <option value='json'>{{ 'Make JSON'|trans }}</option>
     </select>
 
