--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -72,8 +72,8 @@
           <option value='eln'>{{ 'Make ELN'|trans }}</option>
           <option value='zip'>{{ 'Make Zip'|trans }}</option>
           <option value='csv'>{{ 'Make Csv'|trans }}</option>
-          <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
-          <option value='qrPdf'>{{ 'Make QR codes PDF'|trans }}</option>
+          <option value='multipdf'>{{ 'Make PDF'|trans }}</option>
+          <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
           <option value='json'>{{ 'Make JSON'|trans }}</option>
         </select>
 
